--- a/settingsmeta.yaml
+++ b/settingsmeta.yaml
@@ -20,9 +20,9 @@ skillMetadata:
     - name: Capitalization
       fields:
         - name: capitalization
-          type: text
-          label: Write yes if device topics start with capital letters
-          value: yes
+          type: checkbox
+          label: Deactivate if no capitalization 
+          value: "true"
         
     
   
